virtual-services/gateways/public/gateway.yaml

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
  labels:
    app.kubernetes.io/instance: ingressgateway
    istio: ingressgateway
    app: istio-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.fredgentech.com'
    port:
      name: http
      number: 80
      protocol: HTTP
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: "*.fredgentech.com"
    external-dns.alpha.kubernetes.io/target: a9989206-3c79-4ebd-bfb0-0d7ebdb54810.cfargotunnel.com
  name: istio-ing
  namespace: istio-system
spec:
  rules:
  - host: "*.fredgentech.com"
    http:
      paths:
      - backend:
          service:
            name:  ingressgateway
            port:
              number: 80
        path: /
        pathType: Prefix
